# gemini-mem0-streamlit

./: .clinerules  .example.env  .gitignore  LICENSE.txt  app.py  client_utils.py  page_chat.py  planning.md  pyproject.toml  readme.md  requirements.txt  task.md  test_mem0.py  utils.py
pages/: 1_Chat.py  2_Memory.py
prompts/: md-file-generation-prompt.txt
streamlit_graph/: config.py  triple_store.py
versions/0_gemini_client/: .example.env  test_mem0.py
